[package]
name = "log-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.4", features = ["derive"] }
nom = "7.0"
# nom-bufreader = "0.2.0"
# anyhow = "1.0"
# rayon = "1.5"
comfy-table = "5.0"
# coz = "0.1"
tokio = { version = "1", features = ["full"] } # tokio and crossbeam are included so the benchmark will run
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
debug = 0
lto = true
codegen-units = 1
# opt-level = 3 is recommended to experiment with different levels to find the right balance for your project. There may be surprising results, such as level 3
# https://doc.rust-lang.org/cargo/reference/profiles.html

# defaults are:
# [profile.release]
# opt-level = 3
# debug = false
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = false
# overflow-checks = false
# lto = false # https://llvm.org/docs/LinkTimeOptimization.html
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false